--- a/deployments/validator-3.yaml
+++ b/deployments/validator-3.yaml
@@ -68,7 +68,8 @@ spec:
           configMap:
             name: validator-3
         - name: besu-data
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: besu-3-data-pvc
         - name: genesis
           configMap:
             name: besu-genesis
