--- a/deployments/validator-4.yaml
+++ b/deployments/validator-4.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: besu-image
-          image: hyperledger/besu:24.10.0
+          image: hyperledger/besu:latest
           command:
             - /bin/bash
             - -c
