--- a/services/validator-1-svc.yaml
+++ b/services/validator-1-svc.yaml
@@ -1,22 +1,30 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: validator-1-svc
   labels:
     app: besu-validator
     instance: validator-1
+  name: validator-1-svc
+  namespace: default
+  resourceVersion: "584772"
+  uid: b0d4f004-05a0-4a7e-af6f-a5a0065ae7ed
 spec:
-  selector:
-    app: besu-validator
-    instance: validator-1
-  externalIPs: # Figure our how this can work.
-    - 192.168.10.243
+  clusterIP: 10.101.198.185
+  clusterIPs:
+    - 10.101.198.185
   ports:
     - name: http-rpc
-      protocol: TCP
       port: 8545
+      protocol: TCP
       targetPort: 8545
     - name: p2p
       port: 30303
+      protocol: TCP
       targetPort: 30303
+  selector:
+    app: besu-validator
+    instance: validator-1
+  sessionAffinity: None
   type: ClusterIP
+status:
+  loadBalancer: {}
