--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -5,17 +5,30 @@ scrape_configs:
   - job_name: "prometheus"
     static_configs:
       - targets: ["10.108.34.241:9090"]
-  - job_name: besu
-    scrape_interval: 15s
-    scrape_timeout: 10s
+  # - job_name: besu-validators
+  #   scrape_interval: 15s
+  #   scrape_timeout: 10s
+  #   metrics_path: /metrics
+  #   scheme: http
+  #   static_configs:
+  #     - targets:
+  #         [
+  #           "10.101.198.185:8545",
+  #           "10.100.233.191:8545",
+  #           "10.105.85.124:8545",
+  #           "10.100.18.191:8545",
+  #         ]
+  - job_name: besu-validator-1
     metrics_path: /metrics
     scheme: http
     static_configs:
-      - targets:
-          - 10.101.198.185:8545
-  - job_name: push-gateway
+      - targets: ["10.101.198.185:8545"]
+        labels:
+          instance: "validator-1"
+  - job_name: besu-validator-2
     metrics_path: /metrics
     scheme: http
     static_configs:
-      - targets:
-          - 10.108.156.244:9091
+      - targets: ["10.100.233.191:8545"]
+        labels:
+          instance: "validator-2"
